secure.css
/* ... */
.topic-summary button:hover {
	color: white !important;
}

.icon-chevron-down, .icon-chevron-up {
	text-shadow: none !important;
}

.reply-to-tab {
	box-shadow: none !important;
}

div.container {
	width: 100%;
}

.post-controls button:hover {
	color: white !important;
}

table#topic-list {
	box-shadow: none;
}

#topic-list th:last-of-type {
	border-radius: 0 !important;
}

table {
	border-radius: 0 !important;
	border-color: #cccccc !important;
}

.panel ul li a {
	border: none !important;
}

.panel i {
	color: white !important;
}

.panel a:hover {
	background-color: black !important;
	border-radius: 0 !important;
}

.panel li.active a {
	background-color: black !important;
	border-radius: 0 !important;
	border: none !important;
}

thead {
	border: none !important;
}

th {
	border-bottom: none !important;
}

footer {
	box-shadow: none !important;
	border-radius: 0 !important;
	border-top: none !important;
}

.contents {
	border-color: #cccccc !important;
}

.admin-contents .btn-primary, .modal .btn-primary {
	background: #243445 !important;
	color: white !important;
}

.admin-contents .btn-primary:hover, .modal .btn-primary:hover {
	background: #568eca !important;
	color: white !important;
}

.main-link a:hover {
	color: #d54e21 !important;
}

#topic-footer-buttons .create {
	background: #243445 !important;
	color: white !important;
}

#topic-footer-buttons .create:hover {
	background: #568eca !important;
}

i.icon-cirlce {
	color: #d54e21 !important;
}

.submit-panel button {
	background: #243445 !important;
  color: white !important;
}

.submit-panel button:hover {
	background: #568eca !important;
}

.composer-popup {
	background-color: #cadcef !important;
	border: 1px solid #243445 !important;
	z-index: 99999999;
}

.admin-content {
	width: 1000px !important;
}

.dashboard-right, .commits-widget {
	width: 420px !important;
}

.post-menu-area {
	border-radius: 0 !important;
}

h3 a:hover {
	color: #d54e21 !important;
}

h1 a:hover {
	color: #d54e21 !important;
	font-weight: 300 !important;
}

.d-dropdown {
	margin-top: -2px;
	background-color: #000;
	color: #fff;
	padding: 6px 5px 5px;
	border: none !important;
}

.d-dropdown li a:hover, .d-dropdown a:hover, .d-dropdown a:hover i {
	color: #d54e21 !important;
}

#user-stream a:hover, .about-me a:hover {
	color: #d54e21 !important;
}

.d-dropdown .category a:hover, .d-dropdown .category li:hover {
	color: white !important;
	background: #d54e21 !important;
	border-radius: 4px !important;
}

.current-style .nav-pills {
	padding-left: 15px !important;
}

#user-menu {
	width: 1000px !important;
}

.admin-controls ul.nav.nav-pills {
	width: 500px !important;
}

.admin-controls .span15 {
	width: 690px !important;
}

.admin-controls .controls {
	width: 220px !important;
}

.admin-controls .controls button {
	margin-top: -3px !important;
}

.admin-flags th {
	background: white !important;
}

.current-username button {
	border: none !important;
	background: #568eca !important;
	color: white !important;
}

.not-logged-in-avatar {
	border: none !important;
	border-radius: 0 !important;
}

.not-logged-in-avatar:hover {
	background-color: black !important;
	color: white !important;
}

#login-buttons button {
	color: white !important;
}

.wmd-button:hover {
	color: white !important;
}

.d-dropdown li {
	background-color: black !important;
}

div.full-width {
	width: 1000px !important;
}

#topic-footer-buttons button.btn.standard:hover {
	color: #d54e21 !important;
}

#topic-footer-buttons button.btn.btn-primary.create.standard:hover {
	color: white !important;
}

ul.topic-links a {
	color: #243445 !important;
}

#reply-control {
	z-index: 2000 !important;
	background-color: #dcdfe0 !important;
}

#search-dropdown ul li.heading {
	color: white !important;
}

div.controls button.btn.btn-primary {
	background-image: none !important;
	color: white !important;
	background-color: #243445 !important;
}

div.controls button.btn.btn-primary:hover {
	background: #568eca !important;
	color: white !important;
}

#site-map-dropdown i.icon-flag {
	margin-right: 1px !important;
}

td.posters {
	width: 170px !important;
}

.admin-flags tr {
	margin-bottom: 5px !important;
}

.btn-danger {
	color: white !important;
}

.nav-pills > li.active > a, .nav-pills > li > a.active {
	color: white !important;
}

.post-controls button.create:hover {
	background: #568eca !important;
}

body #show-topic-admin {
	top: 15px !important;
}

body.docked #show-topic-admin {
	top: 80px !important;
}

.show-extra-info h1 {
	max-width: 750px !important;
}

#jump-top:hover, #jump-bottom:hover {
	background: transparent !important;
}

@media (max-width: 1150px) {
	body #show-topic-admin {
		margin-top: 165px !important;
	}

	body.docked #show-topic-admin {
		margin-top: 5px !important;
	}
}

.post-select {
	right: 200px !important;
}

#selected-posts {
	width: auto !important;
}

img.logo-big {
	width: 224px !important;
}

#reply-control ul li .selected {
	background-color: #dee9f5 !important;
}

.topic-summary .buttons .btn.collapsed {
	background-color: #dee9f5 !important;
}

button .badge-posts {
	color: black !important;
}

button.show-replies:hover, button.show-replies a:hover, button.show-replies:hover .badge-posts {
	color: white !important;
}

.d-header .icons > li {
	border: 1px solid #777777 !important;
}

